[package]
name = "tasque"
version = "0.1.4"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A simple thread pool library"
homepage = "https://github.com/sile/tasque"
repository = "https://github.com/sile/tasque"
readme = "README.md"
keywords = ["thread-pool"]
categories = ["concurrency"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/tasque"}
codecov = {repository = "sile/tasque"}

[dependencies]
num_cpus = "1"
prometrics = "0.1"
