[package]
name = "tasque"
version = "0.1.5"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A simple thread pool library"
homepage = "https://github.com/sile/tasque"
repository = "https://github.com/sile/tasque"
readme = "README.md"
keywords = ["thread-pool"]
categories = ["concurrency"]
license = "MIT"
edition = "2021"

[dependencies]
num_cpus = "1"
prometrics = "0.1"
